# face-recognition-tensorrt

./: CMakeLists.txt  FaceAntiSpoofing.cpp  FaceAntiSpoofing.h  FaceDetectionYolov5.cpp  FaceDetectionYolov5.h  LICENSE  Logging.h  Makefile  README.md  Utils.h  YoloLayer.cu  YoloLayer.h  cameraClient.cpp  cppSocket.cpp  cppSocket.h  demoServer.cpp  faceAntiSpoofing.cpp  faceAntiSpoofing.h  faceDetection.cpp  faceDetection.h  faceRecognition.cpp  faceRecognition.h  main.cpp
data/: face_anti_spoofing_config.json
